// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight работает по строке 1`] = `
.c0 {
  background-color: transparent;
  font-weight: bold;
}

<div>
  т
  <mark
    class="c0"
  >
    екс
  </mark>
  т
</div>
`;

exports[`Highlight работает позиционная подсветка 1`] = `
.c0 {
  background-color: #ffeba0;
  font-weight: inherit;
}

<div>
  <span
    class="sc-gtssRu"
  >
    H
    <mark
      class="c0"
    >
      er
    </mark>
    e comes Johny!
  </span>
</div>
`;

exports[`Highlight работает с вложенными строками 1`] = `
.c0 {
  background-color: transparent;
  font-weight: bold;
}

<div>
  <span>
    т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
</div>
`;

exports[`Highlight работает с несколькими вложенными строками 1`] = `
.c0 {
  background-color: transparent;
  font-weight: bold;
}

<div>
  <span>
    т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
  <span>
    т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
</div>
`;

exports[`Highlight работает с несколькими паттернами через пробел 1`] = `
.c0 {
  background-color: transparent;
  font-weight: bold;
}

<div>
  <span>
    к
    <mark
      class="c0"
    >
      ако
    </mark>
    й-то т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
  <span>
    к
    <mark
      class="c0"
    >
      ако
    </mark>
    й-то т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
</div>
`;

exports[`Highlight работает с паттернами через массив 1`] = `
.c0 {
  background-color: transparent;
  font-weight: bold;
}

<div>
  <span>
    к
    <mark
      class="c0"
    >
      ако
    </mark>
    й-то т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
  <span>
    к
    <mark
      class="c0"
    >
      ако
    </mark>
    й-то т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
</div>
`;

exports[`Highlight работает с подсветкой фона 1`] = `
.c0 {
  background-color: #ffeba0;
  font-weight: inherit;
}

<div>
  <span>
    к
    <mark
      class="c0"
    >
      ако
    </mark>
    й-то т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
  <span>
    к
    <mark
      class="c0"
    >
      ако
    </mark>
    й-то т
    <mark
      class="c0"
    >
      екс
    </mark>
    т
  </span>
</div>
`;
